@startuml

class House {
  + getLocation() : Location
  + configLocation(...) : boolean
  }

class Location {
  - address : String
  - zipCode : String
  + Location(...)
  + getAddress() : String
  + getZipCode() : String
  + getGPSLocation() : GPSLocation
}

class GPSLocation {
  - latitude : double
  - longitude : double
  + GPSLocation(...)
  + getLatitude() : double
  + getLongitude() : double
}

class LocationDTO {
  - address : String
  - zipCode : String
  - latitude : double
  - longitude : double
  + LocationDTO(...)
  + getAddress() : String
  + getZipCode() : String
  + getLatitude() : double
  + getLongitude() : double
}

class ConfigHouseLocationController {
  - house : House
  + ConfigHouseLocationController(...)
  + configureHouseLocation(...) : boolean
}

House "1" *-- "1" Location : has
Location "1" *-- "1" GPSLocation : has
ConfigHouseLocationController "1" ..> "1" House : uses
ConfigHouseLocationController "1" ..> "1" LocationDTO : uses

@enduml